--- a/league-champions/src/theme/variables.scss
+++ b/league-champions/src/theme/variables.scss
@@ -1,2 +1,33 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
+:root {
+	--ion-color-dark: #ffffff;
+	--ion-color-dark-rgb: 255,255,255;
+	--ion-color-dark-contrast: #000000;
+	--ion-color-dark-contrast-rgb: 0,0,0;
+	--ion-color-dark-shade: #e0e0e0;
+	--ion-color-dark-tint: #ffffff;
+
+    --ion-color-light: #ffffff;
+	--ion-color-light-rgb: 255,255,255;
+	--ion-color-light-contrast: #000000;
+	--ion-color-light-contrast-rgb: 0,0,0;
+	--ion-color-light-shade: #e0e0e0;
+	--ion-color-light-tint: #ffffff;
+}
+
+.ion-color-dark {
+	--ion-color-base: var(--ion-color-dark);
+	--ion-color-base-rgb: var(--ion-color-dark-rgb);
+	--ion-color-contrast: var(--ion-color-dark-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-dark-contrast-rgb);
+	--ion-color-shade: var(--ion-color-dark-shade);
+	--ion-color-tint: var(--ion-color-dark-tint);
+}
+
+.ion-color-light {
+	--ion-color-base: var(--ion-color-light);
+	--ion-color-base-rgb: var(--ion-color-light-rgb);
+	--ion-color-contrast: var(--ion-color-light-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-light-contrast-rgb);
+	--ion-color-shade: var(--ion-color-light-shade);
+	--ion-color-tint: var(--ion-color-light-tint);
+}
