routing fonctionnel et récupération de l'id du champion

--- a/league-champions/src/UI/components/champions/champion-card/champion-card.component.html
+++ b/league-champions/src/UI/components/champions/champion-card/champion-card.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<ion-card [routerLink]="['/', 'champion', champion.id]">
   <ion-card-header>
     <ion-card-title>{{ champion.nom }}</ion-card-title>
   </ion-card-header>
