--- a/league-champions/src/app/pages/champion-details/champion-details.page.html
+++ b/league-champions/src/app/pages/champion-details/champion-details.page.html
@@ -1,13 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>champion-details</ion-title>
+    <ion-title>{{championId}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">champion-details</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
 </ion-content>
