--- a/league-champions/src/app/tab1/tab1.page.html
+++ b/league-champions/src/app/tab1/tab1.page.html
@@ -9,5 +9,5 @@
 <ion-content [fullscreen]="true">
 
   <app-champions-list></app-champions-list>
-  
+  <ion-button expand="block"><ion-icon name="chevron-up-outline"></ion-icon></ion-button>
 </ion-content>
