--- a/league-champions/src/UI/components/champions/champion-card/champion-card.component.scss
+++ b/league-champions/src/UI/components/champions/champion-card/champion-card.component.scss
@@ -2,3 +2,9 @@
     display: flex;
     flex-direction: row;
 }
+.contenta{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
