--- a/league-champions/src/app/pages/champion-details/champion-details.page.html
+++ b/league-champions/src/app/pages/champion-details/champion-details.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""><ion-icon name="arrow-back-outline"></ion-icon>Retour</ion-back-button>
+    </ion-buttons>
     <ion-title>{{championId}}</ion-title>
   </ion-toolbar>
 </ion-header>
