Changements CSS cartes champions

--- a/league-champions/src/UI/components/champions/champion-card/champion-card.component.scss
+++ b/league-champions/src/UI/components/champions/champion-card/champion-card.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
 }
-.contenta{
+.content{
     display: flex;
     flex-direction: column;
     align-items: center;
